CKA/chatgpt/externalname-google.yml
apiVersion: v1
kind: Service
metadata:
  name: google-service
  namespace: default
spec:
  type: ExternalName
  externalName: www.google.com
