CKA/chatgpt/externalname-mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: default
spec:
  type: ExternalName
  externalName: cluster0.a9xnw.mongodb.net
